@@ -117,6 +117,9 @@ extern void menu_video_output(MENU_ITEM_PARAMETERS);
 extern void menu_mmc_divmmc(MENU_ITEM_PARAMETERS);
 extern void menu_storage_diviface_eprom_write_jumper(MENU_ITEM_PARAMETERS);
 extern void menu_storage_mmc_autoconfigure_tbblue(MENU_ITEM_PARAMETERS);
+extern void menu_storage_mmc_emulation(MENU_ITEM_PARAMETERS);
+extern void menu_storage_divmmc_mmc_ports_emulation(MENU_ITEM_PARAMETERS);
+extern void menu_storage_divmmc_diviface(MENU_ITEM_PARAMETERS);
 extern void menu_ide_divide(MENU_ITEM_PARAMETERS);
 extern void menu_audio(MENU_ITEM_PARAMETERS);
 extern void menu_debug_main(MENU_ITEM_PARAMETERS);
